--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,13 @@
 	<string name="dummy_button">Dummy Button</string>
 	<string name="dummy_content">DUMMY\nCONTENT</string>
 
+	<!-- OnboardingFragment -->
+	<string name="first_screen_message">Display some message here about your app features</string>
+	<string name="second_screen_message">Display another message here about your app features</string>
+	<string name="third_screen_message">Let users know the unique features offered by your app</string>
+	<string name="tab_text_1">Tab 1</string>
+	<string name="tab_text_2">Tab 2</string>
+	<!---->
+
+
 </resources>
