--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,11 +56,11 @@
 	<string name="password_min_chars">Password must have more than six characters</string>
 	<string name="check_email">Check Email</string>
 	<string name="verification_email_fail">Sending Verification Email failed</string>
-	<string name="no_account">no account yet?</string>
+	<string name="no_account">No account yet?</string>
 	<string name="first_name">First Name</string>
 	<string name="surname">Surname</string>
 	<string name="sign_up_now">Sign up now</string>
-	<string name="google">google</string>
+	<string name="google">Google</string>
 	<string name="or_sign_in_using">or sign in using</string>
 	<string name="loggin_in">Logging in&#8230;</string>
 	<string name="privacy_policy"><![CDATA[I confirm that I\'ve read the privacy policy and T&C and I agree with it.]]></string>
