--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,26 +72,23 @@
 	<string name="dummy_button">Dummy Button</string>
 	<string name="dummy_content">DUMMY\nCONTENT</string>
 
-	<!-- OnboardingFragment -->
-	<string name="first_screen_message">Display some message here about your app features</string>
-	<string name="second_screen_message">Display another message here about your app features</string>
-	<string name="third_screen_message">Let users know the unique features offered by your app</string>
-	<string name="tab_text_1">Tab 1</string>
-	<string name="tab_text_2">Tab 2</string>
 	<string name="plain_or_login_using">or login using</string>
 	<string name="plain_google">Google</string>
 	<string name="plain_happy_app_logo">Happy App Logo</string>
 	<string name="plain_register_an_account_for_happyapp">Register an account for HappyApp</string>
-	<string name="plain_first_name">First Name</string>
-	<string name="plain_family_name">Family Name</string>
-	<string name="plain_date_of_birth">Date of birth</string>
+	<string name="plain_first_name">First Name*</string>
+	<string name="plain_family_name">Family Name*</string>
+	<string name="plain_date_of_birth">Date of birth*</string>
 	<string name="plain_register_now">Register now</string>
 	<string name="contraction_confirm_tc_privacy_policy">I confirm that I\'ve read and accepted the Terms and Conditions and Privacy Policy</string>
-	<string name="plain_dd_mm_yyyy">DD.MM.YYYY</string>
 	<string name="plain_choose_a_subscription">Choose a subscription</string>
 	<string name="plain_processing_login">Processing login</string>
 	<string name="plain_logging_in">Logging in</string>
 	<string name="placeholder_date_of_birth_content">%1d.%1d.%1d</string>
+	<string name="plain_nickname">Nickname*</string>
+	<string name="contraction_displayed_name">This will be your displayed name</string>
+	<string name="contraction_registration_email">Email*</string>
+	<string name="contraction_registration_password">Password*</string>
 	<!---->
 
 
