--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,7 +79,7 @@
 	<string name="plain_processing_login">Processing login</string>
 	<string name="plain_logging_in">Logging in</string>
 	<string name="placeholder_date_of_birth_content">%1d.%1d.%1d</string>
-	<string name="plain_nickname">Nickname*</string>
+	<string name="plain_username">Username*</string>
 	<string name="contraction_displayed_name">This will be your displayed name</string>
 	<string name="contraction_registration_email">Email*</string>
 	<string name="contraction_registration_password">Password*</string>
@@ -91,9 +91,11 @@
 	<string name="plain_check_out">Check out</string>
 	<string name="plain_subscribe">Subscribe</string>
 	<string name="plain_login">Login</string>
-	<string name="plain_processing_registration">Processing registration</string>
 	<string name="plain_processing">Processing</string>
 	<!---->
+
+	<!-- Content descriptions -->
+	<string name="plain_processing_registration">Processing registration</string>
 
 
 </resources>
