--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,8 +59,7 @@
 	<string name="check_email">Check Email</string>
 	<string name="verification_email_fail">Sending Verification Email failed</string>
 	<string name="no_account">No account yet?</string>
-	<string name="first_name">First Name</string>
-	<string name="surname">Surname</string>
+	<string name="plain_first_name">First Name</string>
 	<string name="sign_up_now">Sign up now</string>
 	<string name="google">Google</string>
 	<string name="or_sign_in_using">or sign in using</string>
@@ -72,17 +71,17 @@
 	<string name="plain_google">Google</string>
 	<string name="plain_happy_app_logo">Happy App Logo</string>
 	<string name="plain_register_an_account_for_happyapp">Register an account for HappyApp</string>
-	<string name="plain_first_name">First Name*</string>
-	<string name="plain_family_name">Family Name*</string>
-	<string name="plain_date_of_birth">Date of birth*</string>
+	<string name="plain_first_name_star">First Name*</string>
+	<string name="plain_family_name_star">Family Name*</string>
+	<string name="plain_date_of_birth_star">Date of birth*</string>
 	<string name="contraction_confirm_tc_privacy_policy">I confirm that I\'ve read and accepted the Terms and Conditions and Privacy Policy</string>
 	<string name="plain_processing_login">Processing login</string>
 	<string name="plain_logging_in">Logging in</string>
 	<string name="placeholder_date_of_birth_content">%1d.%1d.%1d</string>
-	<string name="plain_username">Username*</string>
+	<string name="plain_username_star">Username*</string>
 	<string name="contraction_displayed_name">This will be your displayed name</string>
-	<string name="contraction_registration_email">Email*</string>
-	<string name="contraction_registration_password">Password*</string>
+	<string name="plain_email_star">Email*</string>
+	<string name="plain_password_star">Password*</string>
 	<string name="plain_happyapp_gold_subscription_logo">HappyApp Gold subscription logo</string>
 	<string name="plain_happyapp_gold">HappyApp Gold</string>
 	<string name="plain_test_first_30_days_for_free">Test first 30 days for free</string>
@@ -92,6 +91,9 @@
 	<string name="plain_subscribe">Subscribe</string>
 	<string name="plain_login">Login</string>
 	<string name="plain_processing">Processing</string>
+	<string name="plain_family_name">Family name</string>
+	<string name="plain_username">Username</string>
+	<string name="plain_press_again_to_exit">Press again to exit</string>
 	<!---->
 
 	<!-- Content descriptions -->
@@ -101,6 +103,21 @@
 	<string name="plain_send_again">Send again</string>
 	<string name="plain_i_didn_t_get_an_email">I didn\'t get an email</string>
 	<string name="plain_logout">Logout</string>
+
+	<!-- Error messages / User feedback -->
+	<string name="contraction_server_connection_failed">Failed to connect to the server. Please try again</string>
+	<string name="contraction_empty_credentials_field">You forgot me</string>
+	<string name="plain_username_is_already_taken">Username is already taken</string>
+	<string name="plain_this_email_is_already_in_use">This email is already in use</string>
+	<string name="plain_this_email_is_badly_formatted">This email is badly formatted</string>
+	<string name="contraction_standard_error_message">Oops. Something went wrong. Please try again</string>
+	<string name="contraction_standard_error_message_standby">Oops. Something went wrong. Please stand by</string>
+	<string name="contraction_field_whitespace">%1d cannot start with whitespace</string>
+	<string name="plain_please_confirm">Please confirm</string>
+	<string name="contraction_password_length">I need to be longer than 6 characters of your choice</string>
+	<string name="contraction_check_internet_connection">Check your internet connection and try again</string>
+	<string name="plain_email_or_password_incorrect">Email or password incorrect</string>
+	<string name="contraction_user_not_found">There is no user record corresponding to this identifier. The user may have been deleted</string>
 
 
 </resources>
