working on loading layout visibility

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,7 @@
 	<string name="plain_after_that_only">after that only</string>
 	<string name="plain_6_99_per_30_days">$6.99 per 30 days</string>
 	<string name="plain_check_out">Check out</string>
+	<string name="plain_check_this_out">Check this out</string>
 	<string name="plain_subscribe">Subscribe</string>
 	<string name="plain_login">Login</string>
 	<string name="plain_processing">Processing</string>
