finished implementing change & resend button behaviour. a alert dialog is shown and gives the user the option to enter a new email into a edit text and then cancel or ok. if ok is pressed i update the users email, then resend the email and update the email text view. one error currently on stackoverflow is that when the user clicks the open email button, gmail is opened when it is set as default email program. however if gmail is not set up yet, the user cannot return to my app and has to destroy it.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,5 +157,9 @@
 	<string name="user_should_not_be_here">Looks like you should not be here. Please try to restart or relog.</string>
 	<string name="_404">404</string>
 	<string name="too_many_attempts">Too many attempts. Please relax.</string>
+	<string name="chooser_title">Open Email</string>
+	<string name="no_suitable_app_found">No suitable app found</string>
+	<!-- TODO: Remove or change this placeholder text -->
+	<string name="hello_blank_fragment">Hello blank fragment</string>
 	<!--  -->
 </resources>
