--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,7 +161,7 @@
 	<string name="no_suitable_app_found">No suitable app found</string>
 	<!-- TODO: Remove or change this placeholder text -->
 	<string name="hello_blank_fragment">Hello blank fragment</string>
-	<string name="ok">Ok</string>
+	<string name="ok">OK</string>
 	<string name="cancel">Cancel</string>
 	<!--  -->
 </resources>
